Fix some spacing on mobile on events index

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -14,11 +14,13 @@
 	display: none;
 }
 
-// Event Display ==============================================================
-.event-description
+// Event Index ================================================================
+.events-index-upcoming
 {
+    margin-top: 10px;
 }
 
+// Event Display ==============================================================
 .event-members
 {
     max-height: 350px;
